--- a/Shaping.cabal
+++ b/Shaping.cabal
@@ -16,7 +16,7 @@ extra-source-files:  README.md
 executable Shapings
   hs-source-dirs:      src
   main-is:             Main.hs
-  other-modules:       Ansi, Render, Shapes, Server 
+  other-modules:       Render, Colour, Style, Shapes, Server 
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                        , blaze-svg , scotty , blaze-html, blaze-markup, text
